--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-BACKEND_HOST=http://localhost:8080
+REACT_APP_BASE_URL=http://localhost:8080
+REACT_APP_SOME_KEY=123
+
